# silentdata-polkadot

./: LICENSE  README.md
docker/: Dockerfile.node  start.sh
examples/: .eslintrc.json  Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
examples/src/: constants.ts  index.ts  lib.ts  util.ts
pallet/: .gitignore  Cargo.toml  README.md  silentdata.patch
pallet/src/: lib.rs  tests.rs
smart-contract/: Cargo.toml  README.md  lib.rs
test-helpers/: .gitignore  Cargo.toml  README.md
test-helpers/src/: lib.rs
